# Langchain_Learning

./: .gitignore  4種快取.py  Custom_chatModel.py  README.md  README2.md  cache_args.py  langchain.db  langchain完整開發流程.puml  plugin_function.py  plugin_function_langchain.py  pyproject.toml  semantic_cache.py  streaming.py  token轉換量.py  功能筆記.adoc  對話補全.py
Basic LLM/: SQL自訂表格_cache.py  文字補全.py
Cache/: Custom_cache.py
Document Loader/: AmazonTextractPDFLoader.py  CSVLoader.py  DirectoryLoader.py  JSONLoader.py  MarkdownLoader.py  MathpixPDFLoader.py  PDFMinerPDFasHTMLLoader.py  PlaywrightURLLoader.py  PyMuPDFLoader.py  PyPDFDirectoryLoader.py  PyPDFLoader.py  SeleniumURLLoader.py  UnstructuredHTMLLoader.py  UnstructuredPDFLoader.py  UnstructuredURLLoader.py  WebBaseLoader.py  自訂document_Loader.py
OutputParser/: CommaSeparatedListOutputParser.py  CustomOutputParser.py  DatetimeOutputParser.py  EnumOutputParser.py  PydanticOutputParser.py  RetryWithErrorOutputParser.py  StructuredOutputParser.py
Prompt/: ChatPromptTemplate.py  FewShotPromptTemplate.py  StringPromptTemplate.py
basic LLM/: 3-2.py  Custom_LLM.py  模型配置序列化.py
exampleSelector/: LengthBasedExampleSelector.py  MaxMarginalRelevanceExampleSelector.py  NGramOverlapExampleSelector.py  SemanticSimilarityExampleSelector.py  自訂exampleSelector.py
outputParser/: OutputFixingParser.py  PydanticOutputParser.py  XMLOutputParser.py
prompt/: ChatPromptTemplate.py  FewShotChatMessagePromptTemplate.py  MessagesPlaceholder.py  PartialPromptTemplate.py  PipelinePromptTemplate.py  promptTemplate.py
簡介/: 3-1.py  GPTCache.py  (+4 more)
(+12 files in other folders)
